[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Inventory/ToolTip.gd" type="Script" id=1]
[ext_resource path="res://UI/Inventory/StatRow.tscn" type="PackedScene" id=2]
[ext_resource path="res://Themes/TooltipFont.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.294118, 0.313726, 0.345098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ToolTip" type="Popup"]
margin_right = 100.0
mouse_filter = 2
size_flags_vertical = 9
script = ExtResource( 1 )

[node name="Panel" type="PanelContainer" parent="."]
margin_right = 75.0
margin_bottom = 70.0
mouse_filter = 2
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 73.0
margin_bottom = 68.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="StatsContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 61.0
margin_bottom = 56.0
mouse_filter = 2

[node name="ItemName" type="Label" parent="Panel/MarginContainer/StatsContainer"]
margin_right = 51.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 3 )
text = "Now This"
align = 1

[node name="ValueStat" parent="Panel/MarginContainer/StatsContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 12.0
margin_right = 51.0
margin_bottom = 20.0
